fix: adjusts spacing on about page

--- a/web/src/components/Section/Block/Block.module.scss
+++ b/web/src/components/Section/Block/Block.module.scss
@@ -1,6 +1,10 @@
 @import 'settings';
 @import '_backline-mixins';
 
+.Block {
+  padding-bottom: 0;
+}
+
 .Title {
   margin-bottom: spacing(1);
 }
